# mitchell

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
bindings/javascript/: LICENSE  package-lock.json  package.json  tsconfig.json
bindings/javascript/src/: index.ts  node.ts  store.ts  types.ts
bindings/javascript/tests/: create_fixture.py  store.test.ts
bindings/javascript/tests/fixture/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/calibration_envelope/H1/c/0/: 0
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/calibration_envelope/L1/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/calibration_envelope/L1/c/0/: 0
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/config_file/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/posterior/samples/chi_eff/c/: 0
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/posterior/samples/luminosity_distance/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/posterior/samples/luminosity_distance/c/: 0
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/posterior/samples/mass_1/c/: 0
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/posterior/samples/mass_2/c/: 0
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/priors/analytic/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/IMRPhenomXPHM/psds/L1/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/NRSur7dq4/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/NRSur7dq4/skymap/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/NRSur7dq4/skymap/data/: zarr.json
bindings/javascript/tests/fixture/events/GW000000/NRSur7dq4/skymap/data/c/: 0
bindings/julia/: .gitkeep
bindings/r/: .gitkeep
docs/: cli.md  conf.py  index.rst  javascript-api.rst  javascript.md  quickstart.md  requirements.txt  schema.md  typedoc.json
src/mitchell/: __init__.py  cli.py  store.py
tests/: test_mitchell.py
(+6 files in other folders)
