[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mitchell"
dynamic = ["version"]
description = "Cloud-ready gravitational-wave analysis data library using zarr"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "zarr >= 3.0",
    "numpy >= 1.24",
    "fsspec >= 2023.1",
    "arviz",
    "click >= 8.0",
]

[project.scripts]
mitchell = "mitchell.cli:cli"

[project.optional-dependencies]
cloud = [
    "s3fs >= 2023.1",
    "gcsfs >= 2023.1",
]
dev = [
    "pytest >= 8.0",
    "pytest-cov",
    "ruff",
    "mypy >= 1.0",
]
docs = [
    "sphinx >= 7",
    "kentigern",
    "myst-parser",
    "sphinxcontrib-katex",
    "sphinx-autoapi",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mitchell"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mitchell/_version.py"

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S", "B", "A", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
